[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-lib"              # distribution name (pip install ai-dev-lib)
version = "0.1.0"
description = "Common helpers for AI app development"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Michael Roth Andersen", email = "michael@miroan.dk" }]
license = { text = "MIT" }
dependencies = [
  "pandas>=2.2",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "pytest-cov>=5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
